trans link [[Guaraní]] <break#3268187>

--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -7,12 +7,12 @@
 {{OE.}} ''[[brecan]]''. Compare Dutch ''[[breken]]'', German ''[[brechen]]'', and Gothic ''[[brikan]]''. Cognate with Latin ''[[frangere]]'' (to break).
 
 ===Pronunciation===
-*{{AHD|/brāk/}}, {{IPA|/bɹeɪk/}}, {{SAMPA|/breIk/}}
-*{{audio|en-us-break.ogg|Audio (US)}}
-*Rhymes: [[Rhymes:English:-eɪk|-eɪk]]
+* {{AHD|/brāk/}}, {{IPA|/bɹeɪk/}}, {{SAMPA|/breIk/}}
+* {{audio|en-us-break.ogg|Audio (US)}}
+* Rhymes: [[Rhymes:English:-eɪk|-eɪk]]
 
 ====Homophones====
-*[[brake]]
+* [[brake]]
 
 ===Verb===
 {{en-verb|breaks|breaking|broke|broken}}
@@ -20,292 +20,292 @@
 # {{intransitive}} To [[end up]] in two or more [[piece]]s that can't easily be [[reassemble]]d.
 #: ''If the vase falls to the floor, it might '''break'''.''
 # {{intransitive}} {{medicine}} Of a [[bone]], to [[crack]] or [[fracture]] through a [[sudden]] [[physical]] [[strain]], such as a [[collision]].
-#:''Don't slip and '''break''' your leg.''
+#: ''Don't slip and '''break''' your leg.''
 # {{intransitive}} To [[stop]] [[function]]ing [[properly]] or [[altogether]].
-#:''Don't '''break''' the fridge with your tools.''
+#: ''Don't '''break''' the fridge with your tools.''
 # {{intransitive}} To [[interrupt]] or [[cease]] one's [[work]] or [[occupation]] [[temporarily]].
-#:''Let's '''break''' for lunch.''
+#: ''Let's '''break''' for lunch.''
 # {{intransitive}} {{tennis}} To win a game as [[receiver]].
 # {{intransitive}} {{billiards}} To make the [[first]] [[shot]].
-#:''Is it your or my turn to '''break'''?''
+#: ''Is it your or my turn to '''break'''?''
 # {{transitive}} To [[cause]] to [[end up]] in two or more [[piece]]s.
 #: ''I am going to '''break''' your mask.''
 # {{transitive}} {{medicine}} {{ergative}} Of a bone, to cause to [[crack]] under [[physical]] [[strain]].
-#:''Don't try to '''break''' his neck.''
+#: ''Don't try to '''break''' his neck.''
 # {{transitive}} {{medicine}} {{ergative}} Of a bone, to [[fracture]] accidentally.
-#:''Don't '''break''' your fingers playing basketball.''
+#: ''Don't '''break''' your fingers playing basketball.''
 # {{transitive}} {{ergative}} To cause to [[malfunction]] or [[stop]] [[work]]ing altogether.
-#:''Did you two '''break''' the trolley by racing with it?''
+#: ''Did you two '''break''' the trolley by racing with it?''
 # {{transitive}} To cause a person or animal to [[lose]] his/her/its [[will]], usually obtained by means of [[torture]].
-#:''You have to '''break''' an elephant before you can use it as an animal of burden.''
-#:''America has used many forms of torture to '''break''' their POWs.''
+#: ''You have to '''break''' an elephant before you can use it as an animal of burden.''
+#: ''America has used many forms of torture to '''break''' their POWs.''
 # {{transitive}} To do that which is [[forbid]]den by (a rule or rules).
-#:''When you go to Vancouver, promise me you won't '''break''' the law.''
+#: ''When you go to Vancouver, promise me you won't '''break''' the law.''
 # {{transitive}} (''gaming slang'') To [[design]] or use a [[powerful]] (yet [[legal]]) strategy that unbalances the game in a player's favor.
 #: ''Letting white have three extra queens would '''break''' chess.''
 # {{transitive}} {{media}} {{ergative}} to [[disclose]] or [[make known]] an item of [[news]] etc
 
 ====Synonyms====
-*{{i-c|intransitive: end up in two or more pieces}} [[burst]], [[bust]], [[shatter]], [[shear]], [[smash]], [[split]]
-*{{i-c|intransitive: of a bone}} [[crack]], [[fracture]]
-*{{i-c|intransitive: stop functioning}} [[break down]], [[bust]], [[fail]], [[go down]] (''of a computer or computer network'')
-*{{i-c|intransitive: interrupt}} [[interrupt]], [[pause]]
-*{{i-c|transitive: cause to end up in two or more pieces}} [[shatter]], [[smash]]
-*{{i-c|transitive: of a bone|intentionally}} [[crack]], [[fracture]]
-*{{i-c|transitive: of a bone|accidentally}} [[crack]], [[fracture]]
-*{{i-c|transitive: cause to malfunction or stop working altogether}} [[bust]]
-*{{i-c|transitive: cause a person or animal to lose his/her/its will}} [[subject]], [[tame]]
-*{{i-c|transitive: do that which is forbidden by}} [[contravene]], [[go against]], [[violate]]
+* {{i-c|intransitive: end up in two or more pieces}} [[burst]], [[bust]], [[shatter]], [[shear]], [[smash]], [[split]]
+* {{i-c|intransitive: of a bone}} [[crack]], [[fracture]]
+* {{i-c|intransitive: stop functioning}} [[break down]], [[bust]], [[fail]], [[go down]] (''of a computer or computer network'')
+* {{i-c|intransitive: interrupt}} [[interrupt]], [[pause]]
+* {{i-c|transitive: cause to end up in two or more pieces}} [[shatter]], [[smash]]
+* {{i-c|transitive: of a bone|intentionally}} [[crack]], [[fracture]]
+* {{i-c|transitive: of a bone|accidentally}} [[crack]], [[fracture]]
+* {{i-c|transitive: cause to malfunction or stop working altogether}} [[bust]]
+* {{i-c|transitive: cause a person or animal to lose his/her/its will}} [[subject]], [[tame]]
+* {{i-c|transitive: do that which is forbidden by}} [[contravene]], [[go against]], [[violate]]
 
 ====Antonyms====
-*{{i-c|intransitive: interrupt}} [[carry on]], [[continue]], [[go on]], [[restart]], [[resume]]
-*{{i-c|transitive: cause to end up in two or more pieces}} [[assemble]], [[join]], [[mend]], [[put together]], [[repair]]
+* {{i-c|intransitive: interrupt}} [[carry on]], [[continue]], [[go on]], [[restart]], [[resume]]
+* {{i-c|transitive: cause to end up in two or more pieces}} [[assemble]], [[join]], [[mend]], [[put together]], [[repair]]
 
 ====Derived terms====
 {{top3}}
-*[[breakage]]
-*[[break a leg]]
-*[[break apart]]
-*[[break away]]
-*[[break down]]<!--phrasal verb-->
+* [[breakage]]
+* [[break a leg]]
+* [[break apart]]
+* [[break away]]
+* [[break down]]<!--phrasal verb-->
 <!--the noun "breakdown" is derived from the verb "break down"-->
-*[[break even]]
-*[[break in]]
+* [[break even]]
+* [[break in]]
 {{mid3}}
-*[[break into]]
-*[[break new ground]]
-*[[break off]]
-*[[break open]]
-*[[break out]]<!--phrasal verb-->
+* [[break into]]
+* [[break new ground]]
+* [[break off]]
+* [[break open]]
+* [[break out]]<!--phrasal verb-->
 <!--the noun "break-out" is derived from the verb "break out"-->
-*[[break ranks]]
+* [[break ranks]]
 {{mid3}}
-*[[break someone's heart]]
-*[[break stride]]
-*[[break the ice]]
-*[[break through]]<!--phrasal verb-->
+* [[break someone's heart]]
+* [[break stride]]
+* [[break the ice]]
+* [[break through]]<!--phrasal verb-->
 <!--the noun "breakthrough" is derived from the verb "break through"-->
-*[[break up]]<!--phrasal verb-->
+* [[break up]]<!--phrasal verb-->
 <!--the noun "break-up" is derived from the verb "break up"-->
-*[[break wind]]
+* [[break wind]]
 {{bottom3}}
 
 ====See also====
-*[[breaking]]
-*[[broke]]
-*[[broken]]
+* [[breaking]]
+* [[broke]]
+* [[broken]]
 
 ====Translations====
 {{trans-top|intransitive: end up in two or more pieces that cannot easily be reassembled}}
-*Danish: gå i [[stykke]]r, gå [[itu]]
-*Dutch: [[breken]]
-*Esperanto: [[rompi]]
-*Finnish: [[hajota]]
-*French: [[se rompre]], [[se casser]], [[se briser]]
-*German: [[zerbrechen]], [[kaputtgehen]]
-*Hebrew: [[להישבר]] (le'hishaver)
-*Hungarian: [[törik]], [[eltörik]]
-*Japanese: [[割れる]] (wareru), [[散らばる]] (chirabaru)
+* Danish: gå i [[stykke]]r, gå [[itu]]
+* Dutch: [[breken]]
+* Esperanto: [[rompi]]
+* Finnish: [[hajota]]
+* French: [[se rompre]], [[se casser]], [[se briser]]
+* German: [[zerbrechen]], [[kaputtgehen]]
+* Hebrew: [[להישבר]] (le'hishaver)
+* Hungarian: [[törik]], [[eltörik]]
+* Japanese: [[割れる]] (wareru), [[散らばる]] (chirabaru)
 {{trans-mid}}
-*Korean: [[부러지다]] (bureojida)
-*Portuguese: [[quebrar]], [[partir]], [[romper]] (if flexible material)
-*Romanian: a (se) [[frânge]], a (se) [[rupe]]
-*Russian: [[разбиваться]]/[[разбиться]] (razbivát's'a/razbít's'a)
-*Slovene: [[zlomiti se]] (two pieces), [[razbiti se]] (more pieces)
-*Spanish: [[romper]]
-*Swedish: [[gå sönder]]
-*[[Telugu]]: [[విరుచు]] (virucu), [[విరగగొట్టు]] (viragagoTTu)
+* Korean: [[부러지다]] (bureojida)
+* Portuguese: [[quebrar]], [[partir]], [[romper]] (if flexible material)
+* Romanian: a (se) [[frânge]], a (se) [[rupe]]
+* Russian: [[разбиваться]]/[[разбиться]] (razbivát's'a/razbít's'a)
+* Slovene: [[zlomiti se]] (two pieces), [[razbiti se]] (more pieces)
+* Spanish: [[romper]]
+* Swedish: [[gå sönder]]
+* [[Telugu]]: [[విరుచు]] (virucu), [[విరగగొట్టు]] (viragagoTTu)
 {{trans-bottom}}
 
 {{trans-top|intransitive: of a bone}}
-*Danish: [[brække]]
-*Dutch: [[breken]]
-*Esperanto: [[panei]]
-*Finnish: [[murtua]]
-*French: [[se casser]]
-*German: [[brechen]]
-*Hebrew: [[להישבר]] (le'hishaver)
-*Hungarian: [[eltörik]]
+* Danish: [[brække]]
+* Dutch: [[breken]]
+* Esperanto: [[panei]]
+* Finnish: [[murtua]]
+* French: [[se casser]]
+* German: [[brechen]]
+* Hebrew: [[להישבר]] (le'hishaver)
+* Hungarian: [[eltörik]]
 {{trans-mid}}
-*Italian: [[rompere]]
-*Japanese: [[ひびが入る]] (hibi-ga-hairu), [[折れる]] (oreru)
-*Korean: [[부러지다]] (bureojida)
-*Portuguese: [[quebrar]], [[partir]]
-*Romanian: a (se) [[frânge]]
-*Russian: [[ломаться]]/[[сломаться]] (lomát's'a/slomát's'a)
-*Slovene: [[zlomiti se]]
-*Swedish: [[brytas]]
+* Italian: [[rompere]]
+* Japanese: [[ひびが入る]] (hibi-ga-hairu), [[折れる]] (oreru)
+* Korean: [[부러지다]] (bureojida)
+* Portuguese: [[quebrar]], [[partir]]
+* Romanian: a (se) [[frânge]]
+* Russian: [[ломаться]]/[[сломаться]] (lomát's'a/slomát's'a)
+* Slovene: [[zlomiti se]]
+* Swedish: [[brytas]]
 {{trans-bottom}}
 
 {{trans-top|intransitive: stop functioning properly or altogether}}
-*Danish: gå i [[stykke]]r, gå [[itu]]
-*Dutch: [[stukgaan]], [[kapotgaan]]
-*Finnish: [[hajota]], [[mennä]] [[rikki]]
-*French: [[se casser]]
-*German: [[kaputtgehen]]
-*Hebrew: [[להתקלקל]] (le'hitqalqel)
-*Hungarian: [[elromlik]]
-*Japanese: [[壊れる]] (kowareru)
+* Danish: gå i [[stykke]]r, gå [[itu]]
+* Dutch: [[stukgaan]], [[kapotgaan]]
+* Finnish: [[hajota]], [[mennä]] [[rikki]]
+* French: [[se casser]]
+* German: [[kaputtgehen]]
+* Hebrew: [[להתקלקל]] (le'hitqalqel)
+* Hungarian: [[elromlik]]
+* Japanese: [[壊れる]] (kowareru)
 {{trans-mid}}
-*Korean: [[부서지다]] (buseojida)
-*Portuguese: [[quebrar]], [[partir]]
-*Russian: [[ломаться]]/[[сломаться]] (lomát's'a/slomát's'a)
-*Slovene: [[pokvariti se]]
-*Swedish: [[gå sönder]]
-*Swahili: [[kuvunjika]]
-*[[Telugu]]: [[చెడిపోవు]] (ceDipOvu)
+* Korean: [[부서지다]] (buseojida)
+* Portuguese: [[quebrar]], [[partir]]
+* Russian: [[ломаться]]/[[сломаться]] (lomát's'a/slomát's'a)
+* Slovene: [[pokvariti se]]
+* Swedish: [[gå sönder]]
+* Swahili: [[kuvunjika]]
+* [[Telugu]]: [[చెడిపోవు]] (ceDipOvu)
 {{trans-bottom}}
 
 {{trans-top|intransitive: interrupt or cease one's work or occupation temporarily}}
-*Danish: holde [[pause]]
-*Dutch: [[pauzeren]]
-*Finnish: [[pitää]] [[tauko]]
-*Japanese: [[休憩する]] (kyūkei-suru)
+* Danish: holde [[pause]]
+* Dutch: [[pauzeren]]
+* Finnish: [[pitää]] [[tauko]]
+* Japanese: [[休憩する]] (kyūkei-suru)
 {{trans-mid}}
-*Korean: [[쉬다]] (swida)
-*Portuguese: [[pausar]]
-*Russian: [[делать]]/[[сделать]] [[перерыв]] (d'élat'/sd'élat' p'er'erýv)
-*Swedish: [[avbryta]], [[bryta]]
+* Korean: [[쉬다]] (swida)
+* Portuguese: [[pausar]]
+* Russian: [[делать]]/[[сделать]] [[перерыв]] (d'élat'/sd'élat' p'er'erýv)
+* Swedish: [[avbryta]], [[bryta]]
 {{trans-bottom}}
 
 {{trans-top|intransitive: tennis}}
-*Danish: [[bryde]]
-*Japanese: [[ブレークを取る]] (burēku-wo-toru)
+* Danish: [[bryde]]
+* Japanese: [[ブレークを取る]] (burēku-wo-toru)
 {{trans-mid}}
-*Korean: [[쉬다]] (swida)
+* Korean: [[쉬다]] (swida)
 {{trans-bottom}}
 
 {{trans-top|intransitive: billiards}}
-*Japanese: [[ブレークする]] (burēku-suru)
-*Korean: [[쉬다]] (swida)
+* Japanese: [[ブレークする]] (burēku-suru)
+* Korean: [[쉬다]] (swida)
 {{trans-mid}}
-*Swedish: [[spränga]]
+* Swedish: [[spränga]]
 {{trans-bottom}}
 
 {{trans-top|transitive: cause to end up in two or more pieces}}
-*Albanian: [[thyen]]
-*[[Catalan]]: [[trencar]]
-*Croatian: [[lomiti]]
-*Danish: slå i [[stykke]]r, [[smadre]], [[knuse]], [[ødelægge]]
-*Dutch: [[breken]]
-*Esperanto: [[rompi]]
-*Finnish: [[rikkoa]], [[särkeä]], [[taittaa]], [[hajottaa]], [[pirstoa]]
-*French: [[rompre]], [[casser]], [[briser]]
-*German: [[brechen]]
-*Guaraní: [[joka]]
-*Hebrew: [[לשבור]] (lishbor)
+* Albanian: [[thyen]]
+* [[Catalan]]: [[trencar]]
+* Croatian: [[lomiti]]
+* Danish: slå i [[stykke]]r, [[smadre]], [[knuse]], [[ødelægge]]
+* Dutch: [[breken]]
+* Esperanto: [[rompi]]
+* Finnish: [[rikkoa]], [[särkeä]], [[taittaa]], [[hajottaa]], [[pirstoa]]
+* French: [[rompre]], [[casser]], [[briser]]
+* German: [[brechen]]
+* [[Guaraní]]: [[joka]]
+* Hebrew: [[לשבור]] (lishbor)
 {{trans-mid}}
-*Hungarian: [[tör]], [[eltör]]
-*Irish: [[bris]]
-*Italian: [[rompere]]
-*Japanese: [[割る]] (waru), [[壊す]] (kowasu), [[砕く]] (kudaku)
-*Korean: [[부러뜨리다]] (bureotteurida), [[부수다]] (busuda)
-*Kurdish:
-**Sorani: {{t|ku|شکاندن|sc=KUchar|tr=shkandin}}
-*Portuguese: [[puebrar]], [[partir]], [[romper]] (if flexible)
-*Romanian: [[rupe]], [[frânge]]
-*Russian: [[разбивать]]/[[разбить]] (razbivát'/razbít')
-*Slovene: [[zlomiti]] (two pieces), [[razbiti]] (more pieces)
-*Spanish: [[romper]], [[quebrar]]
-*Swedish: [[bryta]], [[ta sönder]] (''deliberately''), [[ha sönder]] (''involunterally'') (''familiar''), [[slå sönder]] (''violently'')
+* Hungarian: [[tör]], [[eltör]]
+* Irish: [[bris]]
+* Italian: [[rompere]]
+* Japanese: [[割る]] (waru), [[壊す]] (kowasu), [[砕く]] (kudaku)
+* Korean: [[부러뜨리다]] (bureotteurida), [[부수다]] (busuda)
+* Kurdish:
+* * Sorani: {{t|ku|شکاندن|sc=KUchar|tr=shkandin}}
+* Portuguese: [[puebrar]], [[partir]], [[romper]] (if flexible)
+* Romanian: [[rupe]], [[frânge]]
+* Russian: [[разбивать]]/[[разбить]] (razbivát'/razbít')
+* Slovene: [[zlomiti]] (two pieces), [[razbiti]] (more pieces)
+* Spanish: [[romper]], [[quebrar]]
+* Swedish: [[bryta]], [[ta sönder]] (''deliberately''), [[ha sönder]] (''involunterally'') (''familiar''), [[slå sönder]] (''violently'')
 {{trans-bottom}}
 
 {{trans-top|transitive: of a bone, intentionally}}
-*Danish: [[brække]]
-*Dutch: [[breken]]
-*Finnish: [[murtaa]], [[katkaista]], [[taittaa]]
-*French: [[casser]]
-*German: [[brechen]]
-*Hebrew: [[לשבור]] (lishbor)
-*Hungarian: [[eltör]]
+* Danish: [[brække]]
+* Dutch: [[breken]]
+* Finnish: [[murtaa]], [[katkaista]], [[taittaa]]
+* French: [[casser]]
+* German: [[brechen]]
+* Hebrew: [[לשבור]] (lishbor)
+* Hungarian: [[eltör]]
 {{trans-mid}}
-*Japanese: [[ひびが入る]] (hibi-ga-hairu), [[折れる]] (oreru)
-*Korean: [[부러뜨리다]] (bureotteurida)
-*Portuguese: [[quebrar]], [[partir]]
-*Romanian: [[frânge]]
-*Russian: [[ломать]]/[[сломать]] (lomát'/slomát')
-*Slovene: [[zlomiti]]
-*Swedish: [[bryta]]
+* Japanese: [[ひびが入る]] (hibi-ga-hairu), [[折れる]] (oreru)
+* Korean: [[부러뜨리다]] (bureotteurida)
+* Portuguese: [[quebrar]], [[partir]]
+* Romanian: [[frânge]]
+* Russian: [[ломать]]/[[сломать]] (lomát'/slomát')
+* Slovene: [[zlomiti]]
+* Swedish: [[bryta]]
 {{trans-bottom}}
 
 {{trans-top|transitive: of a bone, accidentally}}
-*Danish: [[brække]]
-*Dutch: [[breken]]
-*Finnish: [[murtaa]], [[katkaista]], [[taittaa]]
-*French: [[se casser]]
-*German: [[brechen]]
-*Hebrew: [[לשבור]] (lishbor)
-*Hungarian: [[eltör]]
+* Danish: [[brække]]
+* Dutch: [[breken]]
+* Finnish: [[murtaa]], [[katkaista]], [[taittaa]]
+* French: [[se casser]]
+* German: [[brechen]]
+* Hebrew: [[לשבור]] (lishbor)
+* Hungarian: [[eltör]]
 {{trans-mid}}
-*Japanese: [[ひびが入る]] (hibi-ga-hairu), [[折れる]] (oreru)
-*Korean: [[부러뜨리다]] (bureotteurida)
-*Portuguese: [[quebrar]], [[partir]]
-*Russian: [[ломать]]/[[сломать]] (lomát'/slomát')
-*Slovene: [[zlomiti]]
-*Swedish: [[bryta]]
+* Japanese: [[ひびが入る]] (hibi-ga-hairu), [[折れる]] (oreru)
+* Korean: [[부러뜨리다]] (bureotteurida)
+* Portuguese: [[quebrar]], [[partir]]
+* Russian: [[ломать]]/[[сломать]] (lomát'/slomát')
+* Slovene: [[zlomiti]]
+* Swedish: [[bryta]]
 {{trans-bottom}}
 
 {{trans-top|transitive: cause to malfunction}}
-*Danish: [[ødelægge]], [[smadre]]
-*Dutch: [[kapotmaken]]
-*Finnish: [[rikkoa]], [[särkeä]]
-*French: [[casser]]
-*German: [[kaputtmachen]]
-*Hebrew: [[לשבור]] (lishbor)
-*Hungarian: [[elront]]
+* Danish: [[ødelægge]], [[smadre]]
+* Dutch: [[kapotmaken]]
+* Finnish: [[rikkoa]], [[särkeä]]
+* French: [[casser]]
+* German: [[kaputtmachen]]
+* Hebrew: [[לשבור]] (lishbor)
+* Hungarian: [[elront]]
 {{trans-mid}}
-*Japanese: [[壊す]] (kowasu), [[破壊する]] (hakai-suru)
-*Korean: [[부수다]] (busuda)
-*Portuguese: [[estragar]], [[partir]]
-*Russian: [[ломать]]/[[сломать]] (lomát'/slomát')
-*Slovene: [[pokvariti]]
-*Swedish: [[ha sönder]], [[ta sönder]]
-*Swahili: [[kuvunja]]
+* Japanese: [[壊す]] (kowasu), [[破壊する]] (hakai-suru)
+* Korean: [[부수다]] (busuda)
+* Portuguese: [[estragar]], [[partir]]
+* Russian: [[ломать]]/[[сломать]] (lomát'/slomát')
+* Slovene: [[pokvariti]]
+* Swedish: [[ha sönder]], [[ta sönder]]
+* Swahili: [[kuvunja]]
 {{trans-bottom}}
 
 {{trans-top|transitive: cause a person or animal to lose his/her/its will}}
-*Danish: [[knække]], [[knuse]]
-*Dutch: [[breken]]
-*Finnish: [[kesyttää]], [[murtaa]], [[nujertaa]]
-*French: [[briser]]
-*German: [[brechen]]
-*Hebrew: [[לשבור]] (lishbor)
-*Hungarian: [[elkedvtelenít]]
+* Danish: [[knække]], [[knuse]]
+* Dutch: [[breken]]
+* Finnish: [[kesyttää]], [[murtaa]], [[nujertaa]]
+* French: [[briser]]
+* German: [[brechen]]
+* Hebrew: [[לשבור]] (lishbor)
+* Hungarian: [[elkedvtelenít]]
 {{trans-mid}}
-*Japanese: [[壊す]] (kowasu), [[破壊する]] (hakai-suru)
-*Korean: [[꺾다]] (kkeokkda)
-*Portuguese: [[quebrar]]
-*Russian: [[ломать]]/[[сломать]] (lomát'/slomát')
-*Slovene: [[zlomiti]]
-*Swedish: [[bryta ned]]
+* Japanese: [[壊す]] (kowasu), [[破壊する]] (hakai-suru)
+* Korean: [[꺾다]] (kkeokkda)
+* Portuguese: [[quebrar]]
+* Russian: [[ломать]]/[[сломать]] (lomát'/slomát')
+* Slovene: [[zlomiti]]
+* Swedish: [[bryta ned]]
 {{trans-bottom}}
 
 {{trans-top|transitive: do that which is forbidden by (a rule or rules)}}
-*Danish: [[bryde]], [[krænke]]
-*Dutch: [[breken]], [[overtreden]]
-*Finnish: [[rikkoa]]
-*French: [[outrepasser]]
-*German: [[brechen]]
-*Hebrew: [[להפר]] (le'hafer)
-*Hungarian: [[megszeg]]
+* Danish: [[bryde]], [[krænke]]
+* Dutch: [[breken]], [[overtreden]]
+* Finnish: [[rikkoa]]
+* French: [[outrepasser]]
+* German: [[brechen]]
+* Hebrew: [[להפר]] (le'hafer)
+* Hungarian: [[megszeg]]
 {{trans-mid}}
-*Japanese: [[破る]] (yaburu), [[犯す]] (okasu)
-*Korean: [[깨다]] (kkaeda)
-*Portuguese: [[desrespeitar]], [[violar]]
-*Russian: [[наоушать]]/[[нарушить]] (narušát'/narúšit')
-*Slovene: [[prekršiti]]
-*Swedish: [[bryta]]
-*[[Telugu]]: [[అతిక్రమించు]] (atikramiMcu), [[మీరు]] (meeru)(హద్దుమీరు)
+* Japanese: [[破る]] (yaburu), [[犯す]] (okasu)
+* Korean: [[깨다]] (kkaeda)
+* Portuguese: [[desrespeitar]], [[violar]]
+* Russian: [[наоушать]]/[[нарушить]] (narušát'/narúšit')
+* Slovene: [[prekršiti]]
+* Swedish: [[bryta]]
+* [[Telugu]]: [[అతిక్రమించు]] (atikramiMcu), [[మీరు]] (meeru)(హద్దుమీరు)
 {{trans-bottom}}
 
 {{trans-top|transitive: gaming slang: to design or make (a legal but unfair move)}}
-*Danish: [[ødelægge]]
+* Danish: [[ødelægge]]
 {{trans-mid}}
-*Korean: [[잔꾀부리다]] (jankkoe-burida)
+* Korean: [[잔꾀부리다]] (jankkoe-burida)
 {{trans-bottom}}
 
 {{trans-top|transitive: media: to disclose or make known an item of news etc}}
-*Korean: [[까발리다]] (kkaballida)
+* Korean: [[까발리다]] (kkaballida)
 {{trans-mid}}
 {{trans-bottom}}
 
@@ -313,21 +313,21 @@
 <!--Remove this section once all of the translations below have been moved into the tables above.-->
 {{checktrans}}
 
-*{{ttbc|Chumash (Inezeño)}}: [[kʼot]]
-*{{ttbc|Indonesian}}: [[pecah|memecah]], [[pecah|memecahkan]], [[rusak|merusak]]
-*{{ttbc|Irish}}: [[bris#Irish|bris]]
-*{{ttbc|Latin}}: [[rumpere]], [[frangere]]
-*{{ttbc|Spanish}}: [[romper#Spanish|romper]]
+* {{ttbc|Chumash (Inezeño)}}: [[kʼot]]
+* {{ttbc|Indonesian}}: [[pecah|memecah]], [[pecah|memecahkan]], [[rusak|merusak]]
+* {{ttbc|Irish}}: [[bris#Irish|bris]]
+* {{ttbc|Latin}}: [[rumpere]], [[frangere]]
+* {{ttbc|Spanish}}: [[romper#Spanish|romper]]
 
 ===Noun===
 {{en-noun}}
 
 # {{countable}} An instance of breaking something into two pieces.
-#:''The femur has a clean '''break''' and so should heal easily.''
+#: ''The femur has a clean '''break''' and so should heal easily.''
 # {{countable}} A [[physical]] [[space]] that [[open up|opens up]] in something or between two things.
-#:''The sun came out in a '''break''' in the clouds.''
+#: ''The sun came out in a '''break''' in the clouds.''
 # {{countable}} A [[rest]] or [[pause]], usually from [[work]].
-#:''Let’s take a five-minute '''break'''.''
+#: ''Let’s take a five-minute '''break'''.''
 # {{countable}} {{tennis}} (''tennis'') A [[game]] won by the [[receive|receiving]] [[player]] or players (in case of a [[double]]).
 # {{countable}} {{billiards}} The first [[shot]] in a game of [[billiards]]
 # {{countable}} {{snooker}} The number of points scored by one player in one visit to the table
@@ -335,61 +335,61 @@
 #: 2005: ''The final '''break''' in the Greenmount area is Kirra Point.'' &mdash; coolangatta.net [http://www.coolangatta.net/coolangatta/surfbreaks.html]
 
 ====Synonyms====
-*{{i-c|instance of breaking something into two pieces}} [[split]]
-*{{i-c|physical space that opens up in something or between two things}} [[breach]], [[gap]], [[space]]
-*{{i-c|rest or pause|usually from work}} [[time out]]
+* {{i-c|instance of breaking something into two pieces}} [[split]]
+* {{i-c|physical space that opens up in something or between two things}} [[breach]], [[gap]], [[space]]
+* {{i-c|rest or pause|usually from work}} [[time out]]
 
 ====Derived terms====
-*[[beach break]]
-*[[break of day]]
-*[[daybreak]]
-*[[give someone a break]]<!--as in "give me a break!"-->
-*[[heartbreak]]
+* [[beach break]]
+* [[break of day]]
+* [[daybreak]]
+* [[give someone a break]]<!--as in "give me a break!"-->
+* [[heartbreak]]
 <!--"icebreaker" is derived from "break the ice"-->
-*[[jailbreak]]
-*[[point break]]
-*[[take a break]]
+* [[jailbreak]]
+* [[point break]]
+* [[take a break]]
 
 ====Translations====
 {{trans-top|instance of breaking something into two pieces}}
-*German: [[Bruch]] {{m}}
-*Hebrew: [[שבירה]] (shvira) {{f}}
+* German: [[Bruch]] {{m}}
+* Hebrew: [[שבירה]] (shvira) {{f}}
 {{trans-mid}}
-*Swedish: [[brott]] {{n}}
+* Swedish: [[brott]] {{n}}
 {{trans-bottom}}
 
 {{trans-top|physical space that opens up in something or between two things}}
-*French: [[espace]] {{m}}, [[ouverture]] {{f}}
-*German: [[Öffnung]] {{f}}, [[Spalt]] {{m}}
+* French: [[espace]] {{m}}, [[ouverture]] {{f}}
+* German: [[Öffnung]] {{f}}, [[Spalt]] {{m}}
 {{trans-mid}}
-*Russian: [[разлом]] (razlóm)
-*Japanese: [[割れ目]] (wareme), [[隙間]] (sukima)
+* Russian: [[разлом]] (razlóm)
+* Japanese: [[割れ目]] (wareme), [[隙間]] (sukima)
 {{trans-bottom}}
 
 {{trans-top|rest or pause, usually from work}}
-*Czech: [[přestávka]] {{f}}, [[pauza]] {{f}}
-*Esperanto: [[paŭzi]]
-*Finnish: [[tauko]]
-*French: [[pause#French|pause]] {{f}}
-*German: [[Pause#German|Pause]] {{f}}
-*Italian: [[pausa#Italian|pausa]] {{f}}
+* Czech: [[přestávka]] {{f}}, [[pauza]] {{f}}
+* Esperanto: [[paŭzi]]
+* Finnish: [[tauko]]
+* French: [[pause#French|pause]] {{f}}
+* German: [[Pause#German|Pause]] {{f}}
+* Italian: [[pausa#Italian|pausa]] {{f}}
 {{trans-mid}}
-*Japanese: [[休憩]] (kyūkei)
-*Polish: [[przerwa]]
-*Russian: [[перерыв]] (p'e'rerýv)
-*Slovenian: [[odmor]]
-*Swedish: [[avbrott]] {{n}}, [[rast]] {{c}}, [[paus]] {{c}}
+* Japanese: [[休憩]] (kyūkei)
+* Polish: [[przerwa]]
+* Russian: [[перерыв]] (p'e'rerýv)
+* Slovenian: [[odmor]]
+* Swedish: [[avbrott]] {{n}}, [[rast]] {{c}}, [[paus]] {{c}}
 {{trans-bottom}}
 
 {{trans-top|in tennis}}
-*German: [[Break#German|Break]] {{n}}
-*Japanese: [[ブレーク]] (burēku)
+* German: [[Break#German|Break]] {{n}}
+* Japanese: [[ブレーク]] (burēku)
 {{trans-mid}}
-*Swedish: [[break#Swedish|break]] {{n}}
+* Swedish: [[break#Swedish|break]] {{n}}
 {{trans-bottom}}
 
 {{trans-top|in billiards}}
-*Japanese: [[ブレーク]] (burēku)
+* Japanese: [[ブレーク]] (burēku)
 {{trans-mid}}
 {{trans-bottom}}
 
