--- a/en/b/break.6806.wikitext
+++ b/en/b/break.6806.wikitext
@@ -97,215 +97,215 @@
 
 ====Translations====
 {{trans-top|intransitive: end up in two or more pieces that cannot easily be reassembled}}
-* Danish: gå i [[stykke]]r, gå [[itu]]
-* Dutch: [[breken]]
-* Esperanto: [[rompi]]
-* Finnish: [[hajota]]
-* French: [[se rompre]], [[se casser]], [[se briser]]
-* German: [[zerbrechen]], [[kaputtgehen]]
-* Hebrew: [[להישבר]] (le'hishaver)
-* Hungarian: [[törik]], [[eltörik]]
-* Japanese: [[割れる]] (wareru), [[散らばる]] (chirabaru)
+*Danish: gå i [[stykke]]r, gå [[itu]]
+*Dutch: [[breken]]
+*Esperanto: [[rompi]]
+*Finnish: [[hajota]]
+*French: [[se rompre]], [[se casser]], [[se briser]]
+*German: [[zerbrechen]], [[kaputtgehen]]
+*Hebrew: [[להישבר]] (le'hishaver)
+*Hungarian: [[törik]], [[eltörik]]
+*Japanese: [[割れる]] (wareru), [[散らばる]] (chirabaru)
 {{trans-mid}}
-* Korean: [[부러지다]] (bureojida)
-* Portuguese: [[quebrar]], [[partir]], [[romper]] (if flexible material)
-* Romanian: a (se) [[frânge]], a (se) [[rupe]]
-* Russian: [[разбиваться]]/[[разбиться]] (razbivát's'a/razbít's'a)
-* Slovene: [[zlomiti se]] (two pieces), [[razbiti se]] (more pieces)
-* Spanish: [[romper]]
-* Swedish: [[gå sönder]]
-* [[Telugu]]: [[విరుచు]] (virucu), [[విరగగొట్టు]] (viragagoTTu)
+*Korean: [[부러지다]] (bureojida)
+*Portuguese: [[quebrar]], [[partir]], [[romper]] (if flexible material)
+*Romanian: a (se) [[frânge]], a (se) [[rupe]]
+*Russian: [[разбиваться]]/[[разбиться]] (razbivát's'a/razbít's'a)
+*Slovene: [[zlomiti se]] (two pieces), [[razbiti se]] (more pieces)
+*Spanish: [[romper]]
+*Swedish: [[gå sönder]]
+*[[Telugu]]: [[విరుచు]] (virucu), [[విరగగొట్టు]] (viragagoTTu)
 {{trans-bottom}}
 
 {{trans-top|intransitive: of a bone}}
-* Danish: [[brække]]
-* Dutch: [[breken]]
-* Esperanto: [[panei]]
-* Finnish: [[murtua]]
-* French: [[se casser]]
-* German: [[brechen]]
-* Hebrew: [[להישבר]] (le'hishaver)
-* Hungarian: [[eltörik]]
+*Danish: [[brække]]
+*Dutch: [[breken]]
+*Esperanto: [[panei]]
+*Finnish: [[murtua]]
+*French: [[se casser]]
+*German: [[brechen]]
+*Hebrew: [[להישבר]] (le'hishaver)
+*Hungarian: [[eltörik]]
 {{trans-mid}}
-* Italian: [[rompere]]
-* Japanese: [[ひびが入る]] (hibi-ga-hairu), [[折れる]] (oreru)
-* Korean: [[부러지다]] (bureojida)
-* Portuguese: [[quebrar]], [[partir]]
-* Romanian: a (se) [[frânge]]
-* Russian: [[ломаться]]/[[сломаться]] (lomát's'a/slomát's'a)
-* Slovene: [[zlomiti se]]
-* Swedish: [[brytas]]
+*Italian: [[rompere]]
+*Japanese: [[ひびが入る]] (hibi-ga-hairu), [[折れる]] (oreru)
+*Korean: [[부러지다]] (bureojida)
+*Portuguese: [[quebrar]], [[partir]]
+*Romanian: a (se) [[frânge]]
+*Russian: [[ломаться]]/[[сломаться]] (lomát's'a/slomát's'a)
+*Slovene: [[zlomiti se]]
+*Swedish: [[brytas]]
 {{trans-bottom}}
 
 {{trans-top|intransitive: stop functioning properly or altogether}}
-* Danish: gå i [[stykke]]r, gå [[itu]]
-* Dutch: [[stukgaan]], [[kapotgaan]]
-* Finnish: [[hajota]], [[mennä]] [[rikki]]
-* French: [[se casser]]
-* German: [[kaputtgehen]]
-* Hebrew: [[להתקלקל]] (le'hitqalqel)
-* Hungarian: [[elromlik]]
-* Japanese: [[壊れる]] (kowareru)
+*Danish: gå i [[stykke]]r, gå [[itu]]
+*Dutch: [[stukgaan]], [[kapotgaan]]
+*Finnish: [[hajota]], [[mennä]] [[rikki]]
+*French: [[se casser]]
+*German: [[kaputtgehen]]
+*Hebrew: [[להתקלקל]] (le'hitqalqel)
+*Hungarian: [[elromlik]]
+*Japanese: [[壊れる]] (kowareru)
 {{trans-mid}}
-* Korean: [[부서지다]] (buseojida)
-* Portuguese: [[quebrar]], [[partir]]
-* Russian: [[ломаться]]/[[сломаться]] (lomát's'a/slomát's'a)
-* Slovene: [[pokvariti se]]
-* Swedish: [[gå sönder]]
-* Swahili: [[kuvunjika]]
-* [[Telugu]]: [[చెడిపోవు]] (ceDipOvu)
+*Korean: [[부서지다]] (buseojida)
+*Portuguese: [[quebrar]], [[partir]]
+*Russian: [[ломаться]]/[[сломаться]] (lomát's'a/slomát's'a)
+*Slovene: [[pokvariti se]]
+*Swedish: [[gå sönder]]
+*Swahili: [[kuvunjika]]
+*[[Telugu]]: [[చెడిపోవు]] (ceDipOvu)
 {{trans-bottom}}
 
 {{trans-top|intransitive: interrupt or cease one's work or occupation temporarily}}
-* Danish: holde [[pause]]
-* Dutch: [[pauzeren]]
-* Finnish: [[pitää]] [[tauko]]
-* Japanese: [[休憩する]] (kyūkei-suru)
+*Danish: holde [[pause]]
+*Dutch: [[pauzeren]]
+*Finnish: [[pitää]] [[tauko]]
+*Japanese: [[休憩する]] (kyūkei-suru)
 {{trans-mid}}
-* Korean: [[쉬다]] (swida)
-* Portuguese: [[pausar]]
-* Russian: [[делать]]/[[сделать]] [[перерыв]] (d'élat'/sd'élat' p'er'erýv)
-* Swedish: [[avbryta]], [[bryta]]
+*Korean: [[쉬다]] (swida)
+*Portuguese: [[pausar]]
+*Russian: [[делать]]/[[сделать]] [[перерыв]] (d'élat'/sd'élat' p'er'erýv)
+*Swedish: [[avbryta]], [[bryta]]
 {{trans-bottom}}
 
 {{trans-top|intransitive: tennis}}
-* Danish: [[bryde]]
-* Japanese: [[ブレークを取る]] (burēku-wo-toru)
+*Danish: [[bryde]]
+*Japanese: [[ブレークを取る]] (burēku-wo-toru)
 {{trans-mid}}
-* Korean: [[쉬다]] (swida)
+*Korean: [[쉬다]] (swida)
 {{trans-bottom}}
 
 {{trans-top|intransitive: billiards}}
-* Japanese: [[ブレークする]] (burēku-suru)
-* Korean: [[쉬다]] (swida)
+*Japanese: [[ブレークする]] (burēku-suru)
+*Korean: [[쉬다]] (swida)
 {{trans-mid}}
-* Swedish: [[spränga]]
+*Swedish: [[spränga]]
 {{trans-bottom}}
 
 {{trans-top|transitive: cause to end up in two or more pieces}}
-* Albanian: [[thyen]]
-* [[Catalan]]: [[trencar]]
-* Croatian: [[lomiti]]
-* Danish: slå i [[stykke]]r, [[smadre]], [[knuse]], [[ødelægge]]
-* Dutch: [[breken]]
-* Esperanto: [[rompi]]
-* Finnish: [[rikkoa]], [[särkeä]], [[taittaa]], [[hajottaa]], [[pirstoa]]
-* French: [[rompre]], [[casser]], [[briser]]
-* German: [[brechen]]
-* [[Guaraní]]: [[joka]]
-* Hebrew: [[לשבור]] (lishbor)
+*Albanian: [[thyen]]
+*[[Catalan]]: [[trencar]]
+*Croatian: [[lomiti]]
+*Danish: slå i [[stykke]]r, [[smadre]], [[knuse]], [[ødelægge]]
+*Dutch: [[breken]]
+*Esperanto: [[rompi]]
+*Finnish: [[rikkoa]], [[särkeä]], [[taittaa]], [[hajottaa]], [[pirstoa]]
+*French: [[rompre]], [[casser]], [[briser]]
+*German: [[brechen]]
+*[[Guaraní]]: [[joka]]
+*Hebrew: [[לשבור]] (lishbor)
 {{trans-mid}}
-* Hungarian: [[tör]], [[eltör]]
-* Irish: [[bris]]
-* Italian: [[rompere]]
-* Japanese: [[割る]] (waru), [[壊す]] (kowasu), [[砕く]] (kudaku)
-* Korean: [[부러뜨리다]] (bureotteurida), [[부수다]] (busuda)
-* Kurdish:
-* * Sorani: {{t|ku|شکاندن|sc=KUchar|tr=shkandin}}
-* Portuguese: [[puebrar]], [[partir]], [[romper]] (if flexible)
-* Romanian: [[rupe]], [[frânge]]
-* Russian: [[разбивать]]/[[разбить]] (razbivát'/razbít')
-* Slovene: [[zlomiti]] (two pieces), [[razbiti]] (more pieces)
-* Spanish: [[romper]], [[quebrar]]
-* Swedish: [[bryta]], [[ta sönder]] (''deliberately''), [[ha sönder]] (''involunterally'') (''familiar''), [[slå sönder]] (''violently'')
+*Hungarian: [[tör]], [[eltör]]
+*Irish: [[bris]]
+*Italian: [[rompere]]
+*Japanese: [[割る]] (waru), [[壊す]] (kowasu), [[砕く]] (kudaku)
+*Korean: [[부러뜨리다]] (bureotteurida), [[부수다]] (busuda)
+*Kurdish:
+*:Sorani: {{t|ku|شکاندن|sc=KUchar|tr=shkandin}}
+*Portuguese: [[puebrar]], [[partir]], [[romper]] (if flexible)
+*Romanian: [[rupe]], [[frânge]]
+*Russian: [[разбивать]]/[[разбить]] (razbivát'/razbít')
+*Slovene: [[zlomiti]] (two pieces), [[razbiti]] (more pieces)
+*Spanish: [[romper]], [[quebrar]]
+*Swedish: [[bryta]], [[ta sönder]] (''deliberately''), [[ha sönder]] (''involunterally'') (''familiar''), [[slå sönder]] (''violently'')
 {{trans-bottom}}
 
 {{trans-top|transitive: of a bone, intentionally}}
-* Danish: [[brække]]
-* Dutch: [[breken]]
-* Finnish: [[murtaa]], [[katkaista]], [[taittaa]]
-* French: [[casser]]
-* German: [[brechen]]
-* Hebrew: [[לשבור]] (lishbor)
-* Hungarian: [[eltör]]
+*Danish: [[brække]]
+*Dutch: [[breken]]
+*Finnish: [[murtaa]], [[katkaista]], [[taittaa]]
+*French: [[casser]]
+*German: [[brechen]]
+*Hebrew: [[לשבור]] (lishbor)
+*Hungarian: [[eltör]]
 {{trans-mid}}
-* Japanese: [[ひびが入る]] (hibi-ga-hairu), [[折れる]] (oreru)
-* Korean: [[부러뜨리다]] (bureotteurida)
-* Portuguese: [[quebrar]], [[partir]]
-* Romanian: [[frânge]]
-* Russian: [[ломать]]/[[сломать]] (lomát'/slomát')
-* Slovene: [[zlomiti]]
-* Swedish: [[bryta]]
+*Japanese: [[ひびが入る]] (hibi-ga-hairu), [[折れる]] (oreru)
+*Korean: [[부러뜨리다]] (bureotteurida)
+*Portuguese: [[quebrar]], [[partir]]
+*Romanian: [[frânge]]
+*Russian: [[ломать]]/[[сломать]] (lomát'/slomát')
+*Slovene: [[zlomiti]]
+*Swedish: [[bryta]]
 {{trans-bottom}}
 
 {{trans-top|transitive: of a bone, accidentally}}
-* Danish: [[brække]]
-* Dutch: [[breken]]
-* Finnish: [[murtaa]], [[katkaista]], [[taittaa]]
-* French: [[se casser]]
-* German: [[brechen]]
-* Hebrew: [[לשבור]] (lishbor)
-* Hungarian: [[eltör]]
+*Danish: [[brække]]
+*Dutch: [[breken]]
+*Finnish: [[murtaa]], [[katkaista]], [[taittaa]]
+*French: [[se casser]]
+*German: [[brechen]]
+*Hebrew: [[לשבור]] (lishbor)
+*Hungarian: [[eltör]]
 {{trans-mid}}
-* Japanese: [[ひびが入る]] (hibi-ga-hairu), [[折れる]] (oreru)
-* Korean: [[부러뜨리다]] (bureotteurida)
-* Portuguese: [[quebrar]], [[partir]]
-* Russian: [[ломать]]/[[сломать]] (lomát'/slomát')
-* Slovene: [[zlomiti]]
-* Swedish: [[bryta]]
+*Japanese: [[ひびが入る]] (hibi-ga-hairu), [[折れる]] (oreru)
+*Korean: [[부러뜨리다]] (bureotteurida)
+*Portuguese: [[quebrar]], [[partir]]
+*Russian: [[ломать]]/[[сломать]] (lomát'/slomát')
+*Slovene: [[zlomiti]]
+*Swedish: [[bryta]]
 {{trans-bottom}}
 
 {{trans-top|transitive: cause to malfunction}}
-* Danish: [[ødelægge]], [[smadre]]
-* Dutch: [[kapotmaken]]
-* Finnish: [[rikkoa]], [[särkeä]]
-* French: [[casser]]
-* German: [[kaputtmachen]]
-* Hebrew: [[לשבור]] (lishbor)
-* Hungarian: [[elront]]
+*Danish: [[ødelægge]], [[smadre]]
+*Dutch: [[kapotmaken]]
+*Finnish: [[rikkoa]], [[särkeä]]
+*French: [[casser]]
+*German: [[kaputtmachen]]
+*Hebrew: [[לשבור]] (lishbor)
+*Hungarian: [[elront]]
 {{trans-mid}}
-* Japanese: [[壊す]] (kowasu), [[破壊する]] (hakai-suru)
-* Korean: [[부수다]] (busuda)
-* Portuguese: [[estragar]], [[partir]]
-* Russian: [[ломать]]/[[сломать]] (lomát'/slomát')
-* Slovene: [[pokvariti]]
-* Swedish: [[ha sönder]], [[ta sönder]]
-* Swahili: [[kuvunja]]
+*Japanese: [[壊す]] (kowasu), [[破壊する]] (hakai-suru)
+*Korean: [[부수다]] (busuda)
+*Portuguese: [[estragar]], [[partir]]
+*Russian: [[ломать]]/[[сломать]] (lomát'/slomát')
+*Slovene: [[pokvariti]]
+*Swedish: [[ha sönder]], [[ta sönder]]
+*Swahili: [[kuvunja]]
 {{trans-bottom}}
 
 {{trans-top|transitive: cause a person or animal to lose his/her/its will}}
-* Danish: [[knække]], [[knuse]]
-* Dutch: [[breken]]
-* Finnish: [[kesyttää]], [[murtaa]], [[nujertaa]]
-* French: [[briser]]
-* German: [[brechen]]
-* Hebrew: [[לשבור]] (lishbor)
-* Hungarian: [[elkedvtelenít]]
+*Danish: [[knække]], [[knuse]]
+*Dutch: [[breken]]
+*Finnish: [[kesyttää]], [[murtaa]], [[nujertaa]]
+*French: [[briser]]
+*German: [[brechen]]
+*Hebrew: [[לשבור]] (lishbor)
+*Hungarian: [[elkedvtelenít]]
 {{trans-mid}}
-* Japanese: [[壊す]] (kowasu), [[破壊する]] (hakai-suru)
-* Korean: [[꺾다]] (kkeokkda)
-* Portuguese: [[quebrar]]
-* Russian: [[ломать]]/[[сломать]] (lomát'/slomát')
-* Slovene: [[zlomiti]]
-* Swedish: [[bryta ned]]
+*Japanese: [[壊す]] (kowasu), [[破壊する]] (hakai-suru)
+*Korean: [[꺾다]] (kkeokkda)
+*Portuguese: [[quebrar]]
+*Russian: [[ломать]]/[[сломать]] (lomát'/slomát')
+*Slovene: [[zlomiti]]
+*Swedish: [[bryta ned]]
 {{trans-bottom}}
 
 {{trans-top|transitive: do that which is forbidden by (a rule or rules)}}
-* Danish: [[bryde]], [[krænke]]
-* Dutch: [[breken]], [[overtreden]]
-* Finnish: [[rikkoa]]
-* French: [[outrepasser]]
-* German: [[brechen]]
-* Hebrew: [[להפר]] (le'hafer)
-* Hungarian: [[megszeg]]
+*Danish: [[bryde]], [[krænke]]
+*Dutch: [[breken]], [[overtreden]]
+*Finnish: [[rikkoa]]
+*French: [[outrepasser]]
+*German: [[brechen]]
+*Hebrew: [[להפר]] (le'hafer)
+*Hungarian: [[megszeg]]
 {{trans-mid}}
-* Japanese: [[破る]] (yaburu), [[犯す]] (okasu)
-* Korean: [[깨다]] (kkaeda)
-* Portuguese: [[desrespeitar]], [[violar]]
-* Russian: [[наоушать]]/[[нарушить]] (narušát'/narúšit')
-* Slovene: [[prekršiti]]
-* Swedish: [[bryta]]
-* [[Telugu]]: [[అతిక్రమించు]] (atikramiMcu), [[మీరు]] (meeru)(హద్దుమీరు)
+*Japanese: [[破る]] (yaburu), [[犯す]] (okasu)
+*Korean: [[깨다]] (kkaeda)
+*Portuguese: [[desrespeitar]], [[violar]]
+*Russian: [[наоушать]]/[[нарушить]] (narušát'/narúšit')
+*Slovene: [[prekršiti]]
+*Swedish: [[bryta]]
+*[[Telugu]]: [[అతిక్రమించు]] (atikramiMcu), [[మీరు]] (meeru)(హద్దుమీరు)
 {{trans-bottom}}
 
 {{trans-top|transitive: gaming slang: to design or make (a legal but unfair move)}}
-* Danish: [[ødelægge]]
+*Danish: [[ødelægge]]
 {{trans-mid}}
-* Korean: [[잔꾀부리다]] (jankkoe-burida)
+*Korean: [[잔꾀부리다]] (jankkoe-burida)
 {{trans-bottom}}
 
 {{trans-top|transitive: media: to disclose or make known an item of news etc}}
-* Korean: [[까발리다]] (kkaballida)
+*Korean: [[까발리다]] (kkaballida)
 {{trans-mid}}
 {{trans-bottom}}
 
@@ -313,11 +313,11 @@
 <!--Remove this section once all of the translations below have been moved into the tables above.-->
 {{checktrans}}
 
-* {{ttbc|Chumash (Inezeño)}}: [[kʼot]]
-* {{ttbc|Indonesian}}: [[pecah|memecah]], [[pecah|memecahkan]], [[rusak|merusak]]
-* {{ttbc|Irish}}: [[bris#Irish|bris]]
-* {{ttbc|Latin}}: [[rumpere]], [[frangere]]
-* {{ttbc|Spanish}}: [[romper#Spanish|romper]]
+*{{ttbc|Chumash (Inezeño)}}: [[kʼot]]
+*{{ttbc|Indonesian}}: [[pecah|memecah]], [[pecah|memecahkan]], [[rusak|merusak]]
+*{{ttbc|Irish}}: [[bris#Irish|bris]]
+*{{ttbc|Latin}}: [[rumpere]], [[frangere]]
+*{{ttbc|Spanish}}: [[romper#Spanish|romper]]
 
 ===Noun===
 {{en-noun}}
