-{{italbrac|in plural}} +{{in plural}} <thing#3268214>

--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -8,9 +8,9 @@
 From {{ME.}}, from {{OE.}} ''[[þing]]''.
 
 ===Pronunciation===
-*{{enPR|thĭng}}, {{IPA|/θɪŋ/}}, {{SAMPA|/TIN/}}
-*{{audio|en-us-thing.ogg|Audio (US)}}
-*{{rhymes|ɪŋ}}
+* {{enPR|thĭng}}, {{IPA|/θɪŋ/}}, {{SAMPA|/TIN/}}
+* {{audio|en-us-thing.ogg|Audio (US)}}
+* {{rhymes|ɪŋ}}
 
 ===Noun===
 '''thing''' (''plural:'' [[things]]; ''diminutives:'' [[thingy]] / [[thingie]], [[thingo]] [''Aus''])
@@ -20,7 +20,7 @@ From {{ME.}}, from {{OE.}} ''[[þing]]''.
 # An [[individual]] [[object]].
 # {{law}} whatever can be [[owned]].
 # the [[latest]] [[fad]] or [[fashion]].
-# {{italbrac|in plural}} [[clothes]], [[possessions]] or [[equipment]].
+# {{in plural}} [[clothes]], [[possessions]] or [[equipment]].
 # A unit.
 #: ''Get me a thing of [[apple juice]] at the store.''
 # In [[Scandinavian]] countries, a [[legislative]] or [[judicial]] [[assembly]].
@@ -28,151 +28,151 @@ From {{ME.}}, from {{OE.}} ''[[þing]]''.
 # {{context|U.S. slang}} A [[penis]].
 
 ====Quotations====
-*'''1611''' — [[w:King James Version of the Bible|King James Version of the Bible]], ''[[s:Bible (King James)/Luke|Luke]] 1:1''
-*:Forasmuch as many have taken in hand to set forth in order a declaration of those '''things''' which are most surely believed among us...
+* '''1611''' — [[w:King James Version of the Bible|King James Version of the Bible]], ''[[s:Bible (King James)/Luke|Luke]] 1:1''
+*: Forasmuch as many have taken in hand to set forth in order a declaration of those '''things''' which are most surely believed among us...
 
 ====Synonyms====
-*[[stuff]] ([[uncountable]] equivalent)
-*[[yoke]] ([[Ireland]])
+* [[stuff]] ([[uncountable]] equivalent)
+* [[yoke]] ([[Ireland]])
 
 ====Translations====
 {{trans-top|a separate entity or concept}}
-*Albanian: [[send#Albanian|send]] {{m}}
-*Arabic: {{ARchar|[[شيء]]}} (šæy’) {{m}}
-*[[Basque]]: [[gauza]]
-*Bosnian: [[stvar]] {{f}}
-*[[Breton]]: [[tra]] {{f}}
-*[[Catalan]]: [[cosa]] {{f}}
-*CJKV Characters: [[物]], [[事]]
-*Chinese:
-*:Cantonese: [[東西]] (dung1 sai1), [[物]] (mat6), [[事物]] (si6 mat6)
-*:Mandarin: [[東西]] (dōngxī), [[物]] (wù), [[事物]] (shìwù)
-*Croatian: [[stvar]] {{f}}
-*Czech: [[věc]] {{f}}
-*Danish: [[ting]] {{c}}
-*Dutch: [[ding]] {{n}}
-*Estonian: [[asi]], [[ese]]
-*Finnish: [[asia]]
-*French: [[chose]] {{f}}, [[truc]] {{m}}, [[machin]] {{m}} {{italbrac|informal}}
-*[[Frisian]]: [[ding]] {{n}}
-*German: [[Ding]] {{n}}
-*[[Galician]]: [[cousa]] {{f}}
-*Greek: [[πράγμα]] (prágma) {{n}}
-*[[Guarani]]: [[mba'e]]
-*[[Gujarati]]: [[વસ્તુ]] (vastu)
-*Hebrew: [[דבר]] (davar) {{m}}
-*Hindi: [[वस्तू]] (vastū) {{m}}, [[चीज़]] (chīz) {{f}}
-*Hungarian: [[dolog]]
-*Icelandic: [[hlutur]] {{m}}
-*[[Ido]]: [[kozo]]
+* Albanian: [[send#Albanian|send]] {{m}}
+* Arabic: {{ARchar|[[شيء]]}} (šæy’) {{m}}
+* [[Basque]]: [[gauza]]
+* Bosnian: [[stvar]] {{f}}
+* [[Breton]]: [[tra]] {{f}}
+* [[Catalan]]: [[cosa]] {{f}}
+* CJKV Characters: [[物]], [[事]]
+* Chinese:
+*: Cantonese: [[東西]] (dung1 sai1), [[物]] (mat6), [[事物]] (si6 mat6)
+*: Mandarin: [[東西]] (dōngxī), [[物]] (wù), [[事物]] (shìwù)
+* Croatian: [[stvar]] {{f}}
+* Czech: [[věc]] {{f}}
+* Danish: [[ting]] {{c}}
+* Dutch: [[ding]] {{n}}
+* Estonian: [[asi]], [[ese]]
+* Finnish: [[asia]]
+* French: [[chose]] {{f}}, [[truc]] {{m}}, [[machin]] {{m}} {{italbrac|informal}}
+* [[Frisian]]: [[ding]] {{n}}
+* German: [[Ding]] {{n}}
+* [[Galician]]: [[cousa]] {{f}}
+* Greek: [[πράγμα]] (prágma) {{n}}
+* [[Guarani]]: [[mba'e]]
+* [[Gujarati]]: [[વસ્તુ]] (vastu)
+* Hebrew: [[דבר]] (davar) {{m}}
+* Hindi: [[वस्तू]] (vastū) {{m}}, [[चीज़]] (chīz) {{f}}
+* Hungarian: [[dolog]]
+* Icelandic: [[hlutur]] {{m}}
+* [[Ido]]: [[kozo]]
 {{trans-mid}}
-*Indonesian: [[benda]], [[barang]], [[makhluk]]
-*[[Interlingua]]: [[cosa]]
-*Irish: [[rud]] {{m}}, [[ní]] {{m}}
-*Italian: [[cosa]] {{f}}
-*Japanese: [[事]] ([[こと]], koto)
-*Korean: [[물건]] (mulgeon)
-*Kurdish:
-**Sorani: {{t|ku|شت|sc=KUchar|tr=shit}}
-*Latin: [[res#Latin|rēs]] {{f}}
-*Latvian: [[lieta]] {{f}}
-*{{trreq|Lithuanian}}
-*[[Marathi]]: [[वस्तु]] (vastu)
-*Norwegian: [[ting]] {{m}}, [[dings]] {{m}}, [[greie]] {{f}} a
-*{{trreq|Mongolian}}
-*Old English: [[þing]] {{n}}
-*Persian: {{FAchar|[[چیز]]}} (čiz)
-*Polish: [[rzecz]] {{f}}
-*Portuguese: [[coisa]] {{f}}
-*Romanian: [[lucru]] {{n}}
-*Russian: [[вещь]] (vešč’) {{f}}
-*Sanskrit: [[वस्तु]] (vastu) {{m}}
-*Serbian:
-*:Cyrillic: [[ствар]] {{f}}
-*:Roman: [[stvar]] {{f}}
-*Slovene: [[stvar]] {{f}}, [[reč]] {{f}}
-*Spanish: [[cosa]] {{f}}
-*Swahili: [[kitu]], [[vitu]] ''pl (noun 7/8)''
-*Swedish: [[sak]] {{c}}, [[ting]] {{n}}
-*[[Tupinambá]]: [[mba'e]]
-*{{trreq|Turkish}}
-*Urdu: {{URchar|[[وستو]]}} (vastū) {{m}}, {{URchar|[[چیز]]}} (ćīz) {{f}}
-*Welsh: [[peth]] {{m}}
+* Indonesian: [[benda]], [[barang]], [[makhluk]]
+* [[Interlingua]]: [[cosa]]
+* Irish: [[rud]] {{m}}, [[ní]] {{m}}
+* Italian: [[cosa]] {{f}}
+* Japanese: [[事]] ([[こと]], koto)
+* Korean: [[물건]] (mulgeon)
+* Kurdish:
+* * Sorani: {{t|ku|شت|sc=KUchar|tr=shit}}
+* Latin: [[res#Latin|rēs]] {{f}}
+* Latvian: [[lieta]] {{f}}
+* {{trreq|Lithuanian}}
+* [[Marathi]]: [[वस्तु]] (vastu)
+* Norwegian: [[ting]] {{m}}, [[dings]] {{m}}, [[greie]] {{f}} a
+* {{trreq|Mongolian}}
+* Old English: [[þing]] {{n}}
+* Persian: {{FAchar|[[چیز]]}} (čiz)
+* Polish: [[rzecz]] {{f}}
+* Portuguese: [[coisa]] {{f}}
+* Romanian: [[lucru]] {{n}}
+* Russian: [[вещь]] (vešč’) {{f}}
+* Sanskrit: [[वस्तु]] (vastu) {{m}}
+* Serbian:
+*: Cyrillic: [[ствар]] {{f}}
+*: Roman: [[stvar]] {{f}}
+* Slovene: [[stvar]] {{f}}, [[reč]] {{f}}
+* Spanish: [[cosa]] {{f}}
+* Swahili: [[kitu]], [[vitu]] ''pl (noun 7/8)''
+* Swedish: [[sak]] {{c}}, [[ting]] {{n}}
+* [[Tupinambá]]: [[mba'e]]
+* {{trreq|Turkish}}
+* Urdu: {{URchar|[[وستو]]}} (vastū) {{m}}, {{URchar|[[چیز]]}} (ćīz) {{f}}
+* Welsh: [[peth]] {{m}}
 {{trans-bottom}}
 
 {{trans-top|any physical or psychical entity}}
-*Albanian: [[send#Albanian|send]]
-*Arabic: {{ARchar|[[شيء]]}} (šæy’) {{m}}
-*[[Basque]]: [[gauza]]
-*CJKV Characters: [[物]], [[事]]
-*Chinese:
-*:Cantonese: [[東西]] (dung1 sai1), [[物]] (mat6), [[事物]] (si6 mat6)
-*:Mandarin: [[東西]] (dōngxī), [[物]] (wù), [[事物]] (shìwù)
-*Danish: ting {{c}}
-*Dutch: [[ding]] {{n}}
-*Estonian: [[asi]], [[ese]]
-*Finnish: [[asia]]
-*French: [[chose]] {{f}}, [[truc]] {{m}}, [[machin]] {{m}} {{italbrac|informal}}
-*[[Frisian]]: [[ding]] {{n}}
-*German: [[Ding]] {{n}}
-*[[Galician]]: [[cousa]] {{f}}
-*Greek: [[πράγμα]] (prágma) {{n}}, [[πλάσμα]] (plasma) {{n}}, [[υποκείμενο]] (ipokimeno) {{n}}
-*[[Guarani]]: [[mba'e]]
-*[[Gujarati]]: [[વસ્તુ]] (vastu)
-*Hindi: [[वस्तू]] (vastū) {{m}}, [[चीज़]] (chīz) {{f}}
-*Hungarian: [[dolog]]
-*[[Ido]]: [[kozo]]
-*Indonesian: [[benda]], [[barang]], [[makhluk]]
-*[[Interlingua]]: [[cosa]]
-*[[Inuktitut]]: [[ᐱ]]
-*Irish: [[rud]] {{m}}, [[ní]] {{m}}
+* Albanian: [[send#Albanian|send]]
+* Arabic: {{ARchar|[[شيء]]}} (šæy’) {{m}}
+* [[Basque]]: [[gauza]]
+* CJKV Characters: [[物]], [[事]]
+* Chinese:
+*: Cantonese: [[東西]] (dung1 sai1), [[物]] (mat6), [[事物]] (si6 mat6)
+*: Mandarin: [[東西]] (dōngxī), [[物]] (wù), [[事物]] (shìwù)
+* Danish: ting {{c}}
+* Dutch: [[ding]] {{n}}
+* Estonian: [[asi]], [[ese]]
+* Finnish: [[asia]]
+* French: [[chose]] {{f}}, [[truc]] {{m}}, [[machin]] {{m}} {{italbrac|informal}}
+* [[Frisian]]: [[ding]] {{n}}
+* German: [[Ding]] {{n}}
+* [[Galician]]: [[cousa]] {{f}}
+* Greek: [[πράγμα]] (prágma) {{n}}, [[πλάσμα]] (plasma) {{n}}, [[υποκείμενο]] (ipokimeno) {{n}}
+* [[Guarani]]: [[mba'e]]
+* [[Gujarati]]: [[વસ્તુ]] (vastu)
+* Hindi: [[वस्तू]] (vastū) {{m}}, [[चीज़]] (chīz) {{f}}
+* Hungarian: [[dolog]]
+* [[Ido]]: [[kozo]]
+* Indonesian: [[benda]], [[barang]], [[makhluk]]
+* [[Interlingua]]: [[cosa]]
+* [[Inuktitut]]: [[ᐱ]]
+* Irish: [[rud]] {{m}}, [[ní]] {{m}}
 {{trans-mid}}
-*Italian: [[cosa]] {{f}}
-*Japanese: [[物]] ([[もの]], mono)
-*Korean: [[물건]] (mulgeon)
-*Latin: [[res#Latin|rēs]] {{f}}
-*Latvian: [[lieta]]
-*[[Marathi]]: [[वस्तु]] (vastu)
-*Norwegian: [[ting]], [[dings]], [[greie]] {{m}}
-*Old English: [[þing]] {{n}}
-*Persian: {{FAchar|[[چیز]]}} (čiz)
-*Polish: [[rzecz]] {{f}}
-*Portuguese: [[coisa]] {{f}}
-*Romanian: [[lucru]] {{n}}
-*Russian: [[вещь]] (vešč’) {{f}}
-*Sanskrit: [[वस्तु]] (vastu) {{m}}
-*Serbian:
-*:Cyrillic: [[ствар]] {{f}}
-*:Roman: [[stvar]] {{f}}
-*Slovene: [[stvar]] {{f}}, [[reč]] {{f}}
-*Spanish: [[cosa]] {{f}}
-*Swahili: [[kitu]], [[vitu]] ''pl (noun 7/8)''
-*Swedish: [[sak]] {{c}}, [[ting]] {{n}}
-*[[Telugu]]: [[వస్తువు]] (vastuvu)
-*[[Tupinambá]]: [[mba'e]]
-*Urdu: {{URchar|[[وستو]]}} (vastū) {{m}}, {{URchar|[[چیز]]}} (ćīz) {{f}}
-*Welsh: [[peth]] {{m}}
+* Italian: [[cosa]] {{f}}
+* Japanese: [[物]] ([[もの]], mono)
+* Korean: [[물건]] (mulgeon)
+* Latin: [[res#Latin|rēs]] {{f}}
+* Latvian: [[lieta]]
+* [[Marathi]]: [[वस्तु]] (vastu)
+* Norwegian: [[ting]], [[dings]], [[greie]] {{m}}
+* Old English: [[þing]] {{n}}
+* Persian: {{FAchar|[[چیز]]}} (čiz)
+* Polish: [[rzecz]] {{f}}
+* Portuguese: [[coisa]] {{f}}
+* Romanian: [[lucru]] {{n}}
+* Russian: [[вещь]] (vešč’) {{f}}
+* Sanskrit: [[वस्तु]] (vastu) {{m}}
+* Serbian:
+*: Cyrillic: [[ствар]] {{f}}
+*: Roman: [[stvar]] {{f}}
+* Slovene: [[stvar]] {{f}}, [[reč]] {{f}}
+* Spanish: [[cosa]] {{f}}
+* Swahili: [[kitu]], [[vitu]] ''pl (noun 7/8)''
+* Swedish: [[sak]] {{c}}, [[ting]] {{n}}
+* [[Telugu]]: [[వస్తువు]] (vastuvu)
+* [[Tupinambá]]: [[mba'e]]
+* Urdu: {{URchar|[[وستو]]}} (vastū) {{m}}, {{URchar|[[چیز]]}} (ćīz) {{f}}
+* Welsh: [[peth]] {{m}}
 {{trans-bottom}}
 
 {{trans-top|a legislative or judicial assembly}}
-*German: [[Thing]] {{n}}
+* German: [[Thing]] {{n}}
 {{trans-mid}}
-*Swedish: [[ting]] {{n}}
+* Swedish: [[ting]] {{n}}
 {{trans-bottom}}
 
 ====Derived terms====
 {{top2}}
-*[[anything]]
-*[[everything]]
-*[[here's the thing]]
-*[[nothing]]
-*[[something]]
+* [[anything]]
+* [[everything]]
+* [[here's the thing]]
+* [[nothing]]
+* [[something]]
 {{mid2}}
-*[[the thing is]]
-*[[thingamajig]]<!-- various spellings -->
-*[[thingness]]
-*[[thingo]]
-*[[thingy]]
+* [[the thing is]]
+* [[thingamajig]]<!-- various spellings -->
+* [[thingness]]
+* [[thingo]]
+* [[thingy]]
 {{bottom}}
 
 [[Category:1000 English basic words]]
