"Translingual" seems better than "English" for such Latin phrases <aeq.#3271496>

--- a/en/a/aeq_.802819.wikitext
+++ b/en/a/aeq_.802819.wikitext
@@ -1,5 +1,8 @@
-==English==
-==={{abbreviation}}===
-'''aeq.'''
+==Translingual==
+===Etymology===
+From {{L.}} {{term|aequalis|lang=la}}
 
-# [[aequalis]] (equal)
+==={{abbreviation}}===
+{{infl|mul|abbreviation}}
+
+# [[equal]]
