--- a/en/p/puit.801598.wikitext
+++ b/en/p/puit.801598.wikitext
@@ -1,3 +1,15 @@
+==Dutch==
+
+===Noun===
+{{nl-noun}}
+
+# (archaic) [[frog]]
+
+===Synonyms===
+* [[kikker]]
+
+----
+
 ==Finnish==
 
 ===Etymology 1===
