--- a/en/f/four score and seven years ago.803552.wikitext
+++ b/en/f/four score and seven years ago.803552.wikitext
@@ -1,8 +1,11 @@
-{{Wikipedia|Gettysburg Address}}
+{{wikipedia|Gettysburg Address}}
 ==English==
+
 ===Etymology===
 In Abraham Lincoln's Gettysburg Address, he used this (at the time) commonplace measure of [[score]], meaning "20 [[year]]s". In modern language, it would be simply "87 years ago". However, the widespread notoriety of Lincoln's address, the unusual wording and its status as the first words of the speech have caused the phrase to enter the public consciousness.
 
 ===Phrase===
-#{{idiomatic}} As an [[opener]], a sometimes sarcastic [[indicator]] to indicate a past event being mentioned is particularly important.
-#{{literally}}{{obsolete}} 87 [[year]]s prior to [[today]].
+{{infl|en|phrase}}
+
+# {{idiomatic}} As an [[opener]], a sometimes sarcastic [[indicator]] to indicate a past event being mentioned is particularly important.
+# {{literally}}{{obsolete}} 87 [[year]]s prior to [[today]].
