added inflection line for English/Noun <quadruped#3295532>

--- a/en/q/quadruped.4320.wikitext
+++ b/en/q/quadruped.4320.wikitext
@@ -1,23 +1,26 @@
 ==English==
+
 ===Noun===
+{{infl|en|noun}}[[Category:English nouns that lack inflection template]]
+
 # a [[four-footed]] [[animal]]
 # a [[mammal]] [[ambulating]] [[on all fours]]
 
 ====Translations====
 {{trans-top|a four-footed animal}}
-*Dutch: [[viervoeter]] {{m}}
-*Finnish: [[nelijalkainen]]
-*French: [[quadrupède]] {{m}}
-*Icelandic: [[ferfætlingur]] {{m}}
+* Dutch: [[viervoeter]] {{m}}
+* Finnish: [[nelijalkainen]]
+* French: [[quadrupède]] {{m}}
+* Icelandic: [[ferfætlingur]] {{m}}
 {{trans-mid}}
-*Spanish: [[cuadrupedo]] {{m}}
+* Spanish: [[cuadrupedo]] {{m}}
 {{trans-bottom}}
 
 ====Derived terms====
-*[[quadrupedal]]
+* [[quadrupedal]]
 
 ====See also====
-*[[biped]]
+* [[biped]]
 
 [[io:quadruped]]
 [[ru:quadruped]]
