--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -6,61 +6,4 @@
 ===Noun===
 {{en-noun|-}}
 
-# The act of [[consume|consuming]] something.  
-#:''The fire's consumption of the forest caused ecological changes.''
-# The amount [[consume|consumed]].  
-#:''gross national consumption''
-# {{pathology}} {{obsolete}} [[tuberculosis|Tuberculosis]], specifically [[pulmonary tuberculosis]].
-
-====Translations====
-{{trans-top|the act of consuming something}}
-*Bulgarian: [[консумиране]] {{f}}, [[изразходване]] {{n}}
-*[[Catalan]]: [[consum]] {{m}}
-*Czech:  [[spotřeba]] {{f}}, [[konzumace]] {{f}}
-*Finnish: [[kuluttaminen]], [[kulutus]]
-*French: [[consommer]], [[consumer]]
-*German: [[Konsum]] {{m}}
-*Hebrew: [[צריכה]] (tzrikha) {{f}} (''act of consuming goods'')
-{{trans-mid}}
-*Japanese: [[消費]] (しょうひ, shōhi)
-*Portuguese: [[consumo]] {{m}}
-*Russian: [[потребление]] (potreblénije) {{n}}
-*Spanish: [[consumir]]
-{{trans-bottom}}
-
-{{trans-top|the amount consumed}}
-*Bulgarian: [[консумация]] {{f}}
-*[[Catalan]]: [[consum]] {{m}}
-*Czech: [[spotřeba]] {{f}}
-*Finnish: [[kulutus]]
-*French: [[consommation]] {{f}}
-*German: [[Verbrauch]] {{m}}, [[Verbrauchswert]] {{m}}
-{{trans-mid}}
-*Russian: [[потребление]] (potreblénije) {{n}}
-*Spanish: [[consumo]]
-{{trans-bottom}}
-
-{{trans-top|tuberculosis}}
-*Bulgarian: [[туберкулоза]] {{f}}
-*[[Catalan]]: [[tuberculosi]]
-*Czech: [[tuberkulóza]] {{f}}
-*Finnish: [[tuberkuloosi]]
-*French: [[tuberculose]] {{f}}
-*German: [[Schwindsucht]] {{f}}
-{{trans-mid}}
-*Russian: [[чахотка]] (čakhótka) {{f}}
-*Turkish: [[tüberküloz]]
-*Spanish: [[tuberculosis]]
-{{trans-bottom}}
-
-[[ar:consumption]]
-[[fr:consumption]]
-[[id:consumption]]
-[[it:consumption]]
-[[hu:consumption]]
-[[pl:consumption]]
-[[ru:consumption]]
-[[fi:consumption]]
-[[te:consumption]]
-[[vi:consumption]]
-[[zh:consumption]]
+# the act of putting your two fingers in a womans pussie
