--- a/en/q/quadruped.4320.wikitext
+++ b/en/q/quadruped.4320.wikitext
@@ -1,8 +1,7 @@
 ==English==
 
 ===Noun===
-{{infl|en|noun}}[[Category:English nouns that lack inflection template]]
-
+{{en-noun}}
 # a [[four-footed]] [[animal]]
 # a [[mammal]] [[ambulating]] [[on all fours]]
 
