expand etym. <squirrel#3308286>

--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -3,7 +3,7 @@
 ==English==
 
 ===Etymology===
-From {{AF.}} ''[[esquirel]]'', from {{OF.}} ''[[escurel]]'' (''[[écureuil]]'').
+From {{AF.}} ''[[esquirel]]'', from {{OF.}} ''[[escurel]]'' (modern {{F.}} {{term|écureuil|lang=fr}}), from {{VL.}} ''[[scuriolus]]'', diminutive of ''[[scurius]]'', variant of {{L.}} {{term|sciurus|lang=lat}}, from {{AGr.}} {{term|σκίουρος|lang=grc|sc=polytonic|tr=skíouros}} < {{term|σκιά||shade, shadow|lang=grc|sc=polytonic|tr=skiá}} + {{term|οὐρά||tail|lang=grc|sc=polytonic|tr=ourá}}.
 
 ===Pronunciation===
 *[[RP]] & [[Australian English|AusE]] {{IPA|/'skwɪr.<sup>ə</sup>l}}
