--- a/en/e/Eye-talian.803534.wikitext
+++ b/en/e/Eye-talian.803534.wikitext
@@ -7,7 +7,13 @@
 ===Adjective===
 '''Eye-talian'''
 
-# {{US|slang|uncommon|derogatory}} [[Italian]], usually in reference to an Italian American or Italian American culture.
+# {{Canadian|US|slang|uncommon|derogatory}} [[Italian]], usually in reference to an Italian American or Italian American culture.
+#*'''1848''', Thomas Chandler Haliburton, ''Judge Haliburton's Yankee Stories'', page 175
+#*:No, sir, lose your colonies, and you'd have '''''Eye''-talian''' cities without their climate, '''''Eye''-talian''' lazaroni without their light hearts to sing over their poverty, (for the English can't sing a bit better nor bull frogs,) and worse than '''''Eye''-talian''' eruptions and volcanoes in politics, without the grandeur and sublimity of those in natur'.
+#*'''1918''', Sidney McCall, Mary McNeil Fenollosa, ''Sunshine Beggars'', Page 94
+#*:"She is brown as a chipmunk, and her eyes is as big and lovin' as them of the little '''Eye-talian''' girl you've been talkin' about." "It-talian, not '''Eye-talian''', Phil corrected […]."
+#*'''1995''', Thomas Pynchon, ''Gravity's Rainbow'', page 642
+#*:“Hey, Pensiero, ya know whut a '''Eye-talian''' submarine sounds like, on dat new sonar?"
 
 ===Usage notes===
 The spelling represents a pronunciation of ''Italian'' with {{IPA|/aɪ/}} rather than {{IPA|/ɪ/}} or {{IPA|/ə/}}.
