--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -83,6 +83,7 @@
 {{trans-bottom}}
 
 {{trans-top|indicating time}}
+*Albanian: [[në]]
 *Arabic: {{ARchar|[[في]]}} (fi)
 *[[Breton]]: [[da#Breton|da]]
 *Bulgarian: [[в#Bulgarian|в]] (v)
