--- a/en/v/virtual darkness.803315.wikitext
+++ b/en/v/virtual darkness.803315.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Noun===
-{{en-noun}}
+{{en-noun|sg=[[virtual]] [[darkness]]|es}}
 
 # An environment that has some of the physiological effects of [[darkness]].
 #*'''1942''', IH Wagman, JE Gullberg, "The Relationship between Monochromatic Light and Pupil Diameter. The Low Intensity Visibility Curve as Measured by Pupillary Measurements. ''American Journal of Physiology'', 137: 769-778
