iwiki +tr <bid#3321168>

--- a/en/b/bid.6797.wikitext
+++ b/en/b/bid.6797.wikitext
@@ -149,6 +149,7 @@ From {{OE.}} verb ''[[beodan|bēodan]]'' ‘offer, announce’. Conflation from 
 [[sv:bid]]
 [[te:bid]]
 [[vi:bid]]
+[[tr:bid]]
 [[uk:bid]]
 [[vo:bid]]
 [[zh:bid]]
