--- a/en/p/palet.803129.wikitext
+++ b/en/p/palet.803129.wikitext
@@ -13,6 +13,17 @@ From {{E.|hif}} {{term|plate}}
 [[Category:Fijian Hindi nouns]]
 [[Category:hif:Objects]]
 
+----
+
+==French==
+
+===Noun===
+'''palet'''
+
+# [[hockey]] [[puck]].
+
+[[Category:French nouns]]
+
 [[et:palet]]
 [[fr:palet]]
 [[ru:palet]]
