added inflection line for English/Noun <New Wave#3329264>

--- a/en/n/New Wave.801859.wikitext
+++ b/en/n/New Wave.801859.wikitext
@@ -1,4 +1,7 @@
 {{wikipedia}}
 ==English==
+
 ===Noun===
-#Any of several movements in [[music]] [[film]] which are or were considered [[cutting edge]].
+{{infl|en|noun}}[[Category:English nouns that lack inflection template]]
+
+# Any of several movements in [[music]] [[film]] which are or were considered [[cutting edge]].
