--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -15,7 +15,7 @@ Via {{AF.}} from {{L.}} ''[[senior]]'', '''older''' or '''elder''', from ''[[sen
 # An address to a military [[superior]].
 # An address to any [[male]], especially if his [[name]] or proper [[address]] is unknown.
 #:''Excuse me, '''sir''', could you tell me where the nearest bookstore is?''
-
+# An easy way of annoying a teacher.
 ====Translations====
 {{trans-top|A man of a higher rank or position}}
 {{trans-mid}}
