--- a/en/q/quatorze.26056.wikitext
+++ b/en/q/quatorze.26056.wikitext
@@ -36,6 +36,7 @@ From the Latin ''[[quattuordecim]]'' meaning fourteen.
 [[fr:quatorze]]
 [[ko:quatorze]]
 [[hy:quatorze]]
+[[io:quatorze]]
 [[it:quatorze]]
 [[hu:quatorze]]
 [[ja:quatorze]]
