--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -15,9 +15,9 @@ From {{ME.}}, from {{OE.}} ''[[þing]]''.
 ===Noun===
 '''thing''' (''plural:'' [[things]]; ''diminutives:'' [[thingy]] / [[thingie]], [[thingo]] [''Aus''])
 
-# That which is considered to [[exist]] as a [[separate]] [[entity]], [[quality]] or [[concept]].
+# That which is considered to [[exist]] as a [[separate]] [[entity]], [[object]] [[quality]] or [[concept]].
 # A [[word]], [[symbol]], [[sign]] or other [[referent]] that can be used to [[refer]] to any entity.
-# An [[individual]] [[object]].
+# An [[individual]] [[object]] or [[entity]].
 # {{law}} whatever can be [[owned]].
 # the [[latest]] [[fad]] or [[fashion]].
 # {{in plural}} [[clothes]], [[possessions]] or [[equipment]].
