{{rfd}} sop <say grace#3357015>

--- a/en/s/say grace.776084.wikitext
+++ b/en/s/say grace.776084.wikitext
@@ -5,3 +5,4 @@
 {{en-verb|says grace|saying grace|said grace|said grace}}
 
 #To [[recite]] a [[prayer]] of [[invocation]] or [[thanksgiving]] at meal time.
+{{rfd}}
