--- a/en/s/say grace.776084.wikitext
+++ b/en/s/say grace.776084.wikitext
@@ -2,7 +2,7 @@
 {{wikipedia|Grace (prayer)}}
 
 ===Verb===
-{{en-verb|inf=to [[say]] grace]]|says grace|saying grace|said grace|said grace}}
+{{en-verb|inf=to [[say]] [[grace]]|says grace|saying grace|said grace|said grace}}
 
 #{{idiom}} To [[recite]] a [[prayer]] of [[invocation]] or [[thanksgiving]] at meal time.
 {{rfd}}
