/* Translations */ +Czech <simple#3361887>

--- a/en/s/simple.7363.wikitext
+++ b/en/s/simple.7363.wikitext
@@ -30,6 +30,7 @@ From French ''simple'', from Latin ''[[simplex]]''
 *Arabic: {{ARchar|[[بسيط]]}} {{IPAchar|(basíeʈ)}}
 *Bulgarian: [[прост]] (prost) {{m}}
 *Chinese: {{zh-ts|簡單|简单}} (jiǎndān)
+* Czech: [[jednoduchý]] {{m}}
 *Dutch: [[eenvoudig]], [[simpel]]
 *Esperanto: [[simpla]]
 *Finnish: [[yksinkertainen]] ([[simppeli]], ''slang'')
