--- a/en/r/rabbit.8241.wikitext
+++ b/en/r/rabbit.8241.wikitext
@@ -139,7 +139,7 @@ From Northern [[French]].
 
 =====Translations=====
 {{trans-top|to hunt rabbits}}
-* Finnish: [[olla]] [[jänisjahti|jänisjahdissa]]
+* Finnish: [[olla]] [[kanijahti|kanijahdissa]]
 {{trans-bottom}}
 
 ====See also====
