--- a/en/r/rot.26064.wikitext
+++ b/en/r/rot.26064.wikitext
@@ -8,6 +8,8 @@
 * Rhymes: [[Rhymes:English:-ɒt|-ɒt]]
 
 ===Verb===
+{{en-verb|rots|rotting|rotted|rotten}}
+
 '''to rot'''
 
 # to [[decay]], to become [[bad]]
