--- a/en/u/unsoundness.742255.wikitext
+++ b/en/u/unsoundness.742255.wikitext
@@ -7,7 +7,7 @@ From {{term|un-}} + {{term|sound}} + {{term|-ness}}.
 {{en-noun|-}}
 # The state of being [[unsound]].
 
-====Antonym====
+====Antonyms====
 *[[soundness]]
 
 ====Related terms====
