--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -2,8 +2,8 @@
 ==English==
 
 ===Pronunciation===
-*{{IPA|/kɒp/}}
-*:Rhymes: [[Rhymes:English:-ɒp|-ɒp]]
+* {{IPA|/kɒp/}}
+*: Rhymes: [[Rhymes:English:-ɒp|-ɒp]]
 
 ===Etymology 1===
 From {{L.}} and {{OF.}}  {{term|capere||to capture}}.
@@ -16,10 +16,10 @@ From {{L.}} and {{OF.}}  {{term|capere||to capture}}.
 #*: Heroin appeared on the streets of our town for the first time, and Innie watched helplessly as his sixteen-year-old brother began taking the train to Harlem to '''cop''' smack.
 
 =====Derived terms=====
-*[[cop a feel]]
-*[[cop off]]
-*[[cop on]]
-*[[cop out]], [[cop-out]]
+* [[cop a feel]]
+* [[cop off]]
+* [[cop on]]
+* [[cop out]], [[cop-out]]
 
 ===Etymology 2===
 Short for {{term|copper||police officer}}, itself from {{term|cop||one who cops}} above, i.e. a criminal.
@@ -32,12 +32,12 @@ Sometimes explained as deriving from copper buttons or badges of early [[NYPD]] 
 
 =====Translations=====
 {{trans-top|A police officer}}
-*Norwegian: [[purk]] {{m}}
-*Polish: [[gliniarz]] {{m}}, [[glina]] {{m}}
-*Slovak: [[poliš]] {{m}}, [[hekáč]] {{m}}
+* Norwegian: [[purk]] {{m}}
+* Polish: [[gliniarz]] {{m}}, [[glina]] {{m}}
+* Slovak: [[poliš]] {{m}}, [[hekáč]] {{m}}
 {{trans-mid}}
-*Spanish: [[tombo]] {{m}}, [[paco]] {{m}}
-*Swedish: [[snut]]
+* Spanish: [[tombo]] {{m}}, [[paco]] {{m}}
+* Swedish: [[snut]]
 {{trans-bottom}}
 
 ===Etymology 3===
@@ -53,7 +53,7 @@ Sometimes explained as deriving from copper buttons or badges of early [[NYPD]] 
 ===Etymology 4===
 {{rfe|is this the same as one of the above?}}
 
-===Verb===
+====Verb====
 {{en-verb|copp|ed}}
 
 # {{slang}} to [[admit]], especially to a crime.
@@ -92,7 +92,7 @@ German [[Zopf]]
 A shortened form of [[copain]].
 
 ===Pronunciation===
-*[kɔp]
+* [kɔp]
 
 ===Noun===
 {{fr-noun-reg|m}}
@@ -104,9 +104,9 @@ A shortened form of [[copain]].
 ==Slovak==
 
 ===Noun===
-:'''cop''' {{m}}, '''copy''' {{p}}
-:'''cop''' ''stem''
-:declension pattern {{dub}}
+: '''cop''' {{m}}, '''copy''' {{p}}
+: '''cop''' ''stem''
+: declension pattern {{dub}}
 
 # [[braid]]
 
