--- a/en/s/say grace.776084.wikitext
+++ b/en/s/say grace.776084.wikitext
@@ -8,13 +8,13 @@
 
 ====Translations====
 {{top}}
-*Arabic: {{Arab|[[صلاة الشكر لله قبل الأكل وبعد]]}} {{IPAchar|(ʂállatu š-šúkri li-llāhi qábla al-’ákli wa-báʕd)}}
+*Arabic: {{Arab|([[صلاة الشكر لله]]}} {{Arab|([[قبل]] [[أكل|الأكل]] [[بعد|وبعد]]}} {{IPAchar|(ʂállatu š-šúkri li-llāhi [qábla al-’ákli wa-báʕd])}}
 *Finnish: [[lukea]] [[ruokarukous]]
 *French: [[faire la bénédicité]]
 *German: [[das Tischgebet sprechen]]
 {{mid}}
 *Portuguese: [[dar graças]]
-*Russian: [[прочесть молитву]] ([[трапеза|перед трапезой]]) (pročest’ molítvu [péred trápezoj])
+*Russian: [[прочесть молитву]] ([[трапеза|перед трапезой]]) (pročést’ molítvu [péred trápezoj])
 *Spanish: [[bendecir la mesa]]
 *Swedish: [[be bordsbönen]]
 {{bottom}}
