--- a/en/t/Transnistria.741376.wikitext
+++ b/en/t/Transnistria.741376.wikitext
@@ -4,7 +4,54 @@
 ===Proper noun===
 {{en-proper-noun}}
 
-# An [[autonomous]] [[territory]] within [[Moldova]], not [[internationally]] [[recognized]] as a [[nation]].
+# An [[autonomous]] [[territory]] within [[Moldova]], not [[internationally]] [[recognized]] as a [[nation]]. It is the only part of Moldova in which the [[Cyrillic alphabet]] is official, while the [[Latin alphabet]] is generally "restricted".
+
+====Translations====
+{{trans-top|Transnistria, an autonomous territory in Moldova}}
+* Asturian: {{t|ast|Transnistria|f}}
+* Basque: {{t|eu|Transnistria}}
+* Belarusian: {{t|be|Прыднястроўе}}
+* Bosnian: {{t|bs|Pridnjestrovska Moldavska Republika|f}}
+* Bulgarian: {{t|bg|Приднестровие|f|tr=Pridnestrovie}}
+* Catalan: {{t|ca|Transnístria|f}}
+* Chinese: {{zh-ts|德涅斯特河沿岸共和國|德涅斯特河沿岸共和国}}
+*: Cantonese: {{t|yue|德涅斯特河沿岸共和國}}
+*: Mandarin: {{t|zh|德涅斯特河沿岸共和国}}
+* Croatian: {{t|hr|Pridnjestrovska Moldavska Republika|f}}
+* Czech: {{t|cs|Podněstří}}
+* Dutch: {{t|nl|Trans-Nistrië}}
+* Esperanto: {{t|eo|Ĉednestrio}}, {{t|eo|Transdnestrio}}, {{t|eo|Transnistrio}}
+* Estonian: {{t|et|Transnistria}}
+* Finnish: {{t|fi|Transnistria}}
+* French: {{t|fr|Transnistrie|f}}, {{t|fr|République moldave de Transnistrie|f}}
+* Georgian: {{t|ka|დნესტრისპირეთი}}
+* German: {{t|de|Transnistrien}}
+* Greek: {{t|el|Υπερδνειστερία}}
+* Hebrew: {{t|he|טרנסניסטריה|}} {{g|Hebrew}}
+{{trans-mid}}
+* Hungarian: {{t|hu|Dnyeszter Menti Köztársaság}}
+* Ido: {{t|id|Transnistria}}
+* Italian: {{t|it|Transnistria|f}}
+* Japanese: {{t|ja|沿ドニエストル共和国}}
+* Korean: {{t|ko|트란스니스트리아}}
+* Latvian: {{t|lv|Piedņestras Moldāvu Republika}}
+* Lithuanian: {{t|lt|Padniestrė}}
+* Moldavian: {{t|mo|Транснистриа|f|tr=[[Transnistria]]}}
+* Norwegian: {{t|no|Transnistria}}
+* [[Occitan]]: {{t|oc|Transnístria|f}}
+* [[Piedmontese]]: {{t|pms|Transnistria|f}}
+* Polish: {{t|pl|Naddniestrze}}
+* Portuguese: {{t|pt|Transnístria|f}}
+* Romanian: {{t|ro|Transnistria|f}}
+* Russian: {{t|ru|Приднестровье|tr=Pridnestrov'e}}
+* Serbian: {{t|sr|Придњестровље}}
+* Slovak: {{t|sk|Podnestersko}}
+* Spanish: {{t|es|Transnistria}}
+* Swedish: {{t|sv|Transnistrien}}
+* Ukrainian: {{t|uk|Придністровська Молдавська Республіка|tr=Pridnistrovs'ka Moldavs'ka Respublika|f}}
+{{trans-bot}}
+
+[[Category:Place names]]
 
 [[fr:Transnistria]]
 [[pl:Transnistria]]
