--- a/en/t/Transnistria.741376.wikitext
+++ b/en/t/Transnistria.741376.wikitext
@@ -36,7 +36,7 @@
 * Korean: {{t|ko|트란스니스트리아}}
 * Latvian: {{t|lv|Piedņestras Moldāvu Republika}}
 * Lithuanian: {{t|lt|Padniestrė}}
-* Moldavian: {{t|mo|Транснистриа|f|tr=[[Transnistria]]}}
+* Moldavian: {{t|mo|Транснистриа|f|tr=[[#Romanian|Transnistria]]}}
 * Norwegian: {{t|no|Transnistria}}
 * [[Occitan]]: {{t|oc|Transnístria|f}}
 * [[Piedmontese]]: {{t|pms|Transnistria|f}}
