--- a/en/l/Las Vegas.741384.wikitext
+++ b/en/l/Las Vegas.741384.wikitext
@@ -6,9 +6,10 @@ From {{Sp.}} ''[[las]] [[vegas]]'' 'the meadows'
 ===Proper noun===
 {{en-proper-noun}}
 
-# A city in [[Nevada]], USA, known for its [[gambling]].
+# A desert city in [[Nevada]], USA, known for its large hotels, extravagant entertainment and dining, and [[gambling]].
 
 ===Synonyms===
 *[[Vegas]]
-
+*[[Sin City]]
+*[[The Strip]]
 [[Category:Cities]]
