--- a/en/a/abandonar.4113.wikitext
+++ b/en/a/abandonar.4113.wikitext
@@ -5,6 +5,9 @@
 
 # to [[abandon]]
 
+====Conjugation====
+{{ca-conj-ar|abandon}}
+
 ----
 
 ==Ido==
@@ -31,6 +34,9 @@
 {{infl|pt|verb}}
 
 # to [[abandon]]
+
+====Conjugation====
+{{pt-conj-ar|abandon}}
 
 ----
 
